Fixed off center text

--- a/VendableClient/www/css/style.css
+++ b/VendableClient/www/css/style.css
@@ -182,7 +182,6 @@
 
 .note {
   width: 100%;
-  padding: 50px;
   margin-top: 10px;
   position: relative;
   font-family: 'Gochi Hand', cursive;
@@ -239,10 +238,14 @@
 .transparent-box {
   opacity: 0.6;
 }
-
+/*
 .no-border-search {
   border: 0;
   margin: 0;
+}*/
+
+.with-padding {
+  padding: 50px;
 }
 
 
